# cadastro

./: .gitignore  pyproject.toml
src/cadastro/: main.py
src/cadastro/services/: cadastro_client.py
